# cohere-cpp

./: CMakeLists.txt  LICENSE  README.md  curl_test  curl_test.cpp  main.cpp  prompts.txt
lib/: apikey.h  chat.h  classify.h  cohere.h  connectors.h  curl_test.cpp  curlsession.h  curlsession.hpp  dataset.h  embed.h  finetune.h  interface.h  models.h  rerank.h  tokens.h
src/: chat.cpp  classify.cpp  cohere.cpp  connectors.cpp  curlsession.cpp  dataset.cpp  embed.cpp  finetune.cpp  interface.cpp  models.cpp  rerank.cpp  tokens.cpp
